syntax="proto3";

package main;

option go_package = "logic/proto";


service Authentication {
    rpc RegisterUser(UserRegisterRequest) returns (UserRegisterResponse);
    rpc LoginUser(UserLoginRequest) returns (UserLoginResponse);
} 

message UserRegisterRequest{
    string login = 1;
    string password = 2;
    string firstname = 3;
    string secondname = 4;
}

message UserRegisterResponse{
    bool ok = 1;
}

message UserLoginRequest{
    string login = 1;
    string password = 2;
}

message UserLoginResponse{
    string userid = 1;
    bool ok = 2;
}

service NewPhotos {
  
    // ####################    Main funcs

    rpc  GetPhotos(GetPhotosRequest) returns (stream GetPhotosResponse);

    rpc GetVideos (GetVideosRequest) returns (stream GetVideosResponse);

    rpc  UploadPhoto(stream UploadPhotoRequest) returns (UploadPhotoResponse);

    rpc UploadVideo(stream UploadVideoRequest) returns (UploadVideoResponse);

    //#####################    Account funcs   
    
    rpc  GetUserinfo(GetUserinfoRequest) returns (GetUserinfoResponse);

    rpc GetUserAvatar(GetUserAvatarRequest) returns (GetUserAvatarResponse);

    rpc SetUserAvatar (SetUserAvatarRequest) returns (SetUserAvatarResponse);

    //#####################    Album funcs

    rpc  GetPhotosFromAlbum(GetPhotosFromAlbumRequest) returns (stream GetPhotosFromAlbumResponse);

    rpc GetVideosFromAlbum(GetVideosFromAlbumRequest) returns (stream GetVideosFromAlbumResponse);
    
    rpc  GetAlbums(GetAlbumsRequest) returns (stream GetAlbumsResponse);

    rpc  CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse);

    rpc  DeleteAlbum(DeleteAlbumRequest) returns (DeleteAlbumResponse);

    rpc  UploadPhotoToAlbum(stream UploadPhotoToAlbumRequest) returns (UploadPhotoToAlbumResponse);

    rpc  UploadVideoToAlbum(stream UploadVideoToAlbumRequest) returns (UploadVideoToAlbumResponse);

    rpc DeletePhotoFromAlbum(stream DeletePhotoFromAlbumRequest) returns (DeletePhotoFromAlbumResponse);

    rpc DeleteVideoFromAlbum(stream DeleteVideoFromAlbumRequest) returns (DeleteVideoFromAlbumResponse);

    rpc GetAlbumInfo (GetAlbumInfoRequest) returns (GetAlbumInfoResponse);

    //#####################    Util funcs

    rpc  GetFullPhotoByThumbnail(GetFullPhotoByThumbnailRequest) returns (GetFullPhotoByThumbnailResponse);
}


// ####################    Main funcs' messages

message GetPhotosRequest {
    string userid = 1;
}

message GetPhotosResponse {
    bytes photo = 1; 
    bytes thumbnail = 2;
    string extension = 3;
    double size = 4;
    string tags = 5;
    bool ok = 6;
}

message GetVideosRequest {
    string userid = 1;
}

message GetVideosResponse {
    bytes video = 1;
    bool ok = 2;
}


message UploadPhotoRequest {
    string userid = 1;
    bytes photo = 2;
    bytes thumbnail = 3;
    string extension = 4;
    double size = 5;
}

message UploadPhotoResponse {
    bool ok = 1;
}

message UploadVideoRequest {
    string userid = 1;
    bytes video = 2;
    string extension = 3;
    double size = 4;
}

message UploadVideoResponse {
    bool ok = 1;
}

//#####################    Account funcs' messages   

message GetUserinfoRequest {
    string userid = 1;
}

message GetUserinfoResponse {
    double storage = 1;
    string firstname = 2;
    string secondname = 3;
    bool ok = 4;
}

message GetUserAvatarRequest{
    string userid = 1;
}

message GetUserAvatarResponse{
    bytes avatar = 1;
    bool ok = 2;
}

message SetUserAvatarRequest {
    string userid = 1;
    bytes avatar = 2;
}

message SetUserAvatarResponse {
    bool ok = 1;
}

//#####################    Album funcs' messages

message GetPhotosFromAlbumRequest{
    string userid = 1;
    string name = 2; 
}

message GetPhotosFromAlbumResponse{
    bytes photo = 1; 
    bytes thumbnail = 2;
    string extension = 3;
    double size = 4;
    string album = 5;
    bool ok = 6;
}

message GetVideosFromAlbumRequest{
    string userid = 1;
    string name = 2; 
}

message GetVideosFromAlbumResponse{
    bytes video = 1; 
    string extension = 2;
    bool ok = 3;
}

message GetAlbumsRequest{
    string userid = 1;
}

message GetAlbumsResponse{
    string name = 1;
    bytes latest_photo = 2;
    bytes latest_photo_thumbnail = 3;
    bool ok = 4;
}

message CreateAlbumRequest {
    string userid = 1;
    string name = 2;
}

message CreateAlbumResponse {
    bool ok = 1;
}

message DeleteAlbumRequest{
    string userid = 1;
    string name = 2;
}

message DeleteAlbumResponse{
    bool ok = 1;
}

message UploadPhotoToAlbumRequest{
    string userid = 1;
    bytes photo = 2;
    bytes thumbnail = 3;
    string extension = 4;
    double size = 5;
    string album = 6;
}

message UploadPhotoToAlbumResponse{
    bool ok = 1;
}

message UploadVideoToAlbumRequest{
    string userid = 1;
    bytes video = 2;
    string extension = 3;
    double size = 4;
    string album = 5;
}

message UploadVideoToAlbumResponse{
    bool ok = 1;
}

message DeletePhotoFromAlbumRequest {
    string userid = 1;
    string album = 2;
    bytes photo = 3;
}

message DeletePhotoFromAlbumResponse {
    bool ok = 1;
}

message DeleteVideoFromAlbumRequest {
    string userid = 1;
    string album = 2;
    bytes video = 3;
}

message DeleteVideoFromAlbumResponse {
    bool ok = 1;
}

message GetAlbumInfoRequest {
    string userid = 1;
    string album = 2;
}

message GetAlbumInfoResponse {
    bool ok = 1;
    int64 media_num = 2;
}

//#####################    Util funcs' messages

message GetFullPhotoByThumbnailRequest {
    string userid = 1;
    bytes thumbnail = 2;
}

message GetFullPhotoByThumbnailResponse {
    bytes photo = 1;
    bool ok = 2;
}


service Tag{
    rpc RecognizeObject(RecognizeObjectRequest) returns (RecognizeObjectResponse){};
}

message RecognizeObjectRequest{
    bytes photo = 1; 
}

message RecognizeObjectResponse{
    string tags = 1;
    bool ok = 2;
}
